# pet-simulation

./: .gitignore  LICENSE  README.md  main.py  plan.md  pyproject.toml  sino_show.py  test.ipynb  test.py
MCGPU-PET/: MCGPU-PET.x  Makefile
MCGPU-PET/sample_simulation_copy/: MCGPU-PET.out  MCGPU_PET.psf  MCGPU_PET.psf.raw  visualization.ipynb
gate-pet/: README.md  bruker_pet_sim.py
petsim/: __init__.py  materials.py  phantom.py  run.py  scanner.py  sinogram.py  sinogram_binning.py  source.py
petsim/backends/: __init__.py  gate.py  mcgpu.py  mcgpu_runtime.py
tests/: test_gate.py  test_materials.py  test_mcgpu.py  test_mcgpu_runtime.py  test_phantom.py  test_run.py  test_scanner.py  test_sinogram.py  test_source.py
